--- a/internal/templates/emails/welcome.html
+++ b/internal/templates/emails/welcome.html
@@ -7,7 +7,11 @@
   <div>
     <p>👋🏼 Hey {{.Name}},</p>
     <p>We are pleased to your partners on your writing journey</p>
-    <p>To continue you need to verify that you got this message</p>
+    <p>
+      To fully enjoy your experience with us you need to verify that you got
+      this email
+    </p>
+    <p>Code: <b>{{.Token}}</b></p>
     <p>Happy writing ✍️</p>
     <p>❤️ from the Blog team</p>
   </div>
