feat: add token validity to welcome email

--- a/internal/templates/emails/welcome.html
+++ b/internal/templates/emails/welcome.html
@@ -12,6 +12,10 @@
       this email
     </p>
     <p>Code: <b>{{.Token}}</b></p>
+    <p>
+      This token is a <p>one time</p> token
+    </p>
+
     <p>Happy writing ✍️</p>
     <p>❤️ from the Blog team</p>
   </div>
